# GenericServer

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  GenericServer.cpp  GenericServer.h  HillClimbingAlgorithm.cpp  HillClimbingAlgorithm.h  ISearcher.h  MatrixBuilder.cpp  MatrixBuilder.h  MatrixCreator.cpp  MatrixCreator.h  MatrixGraph.cpp  MatrixGraph.h  MirrorClientHandler.cpp  MirrorClientHandler.h  ParallelServer.cpp  ParallelServer.h  PriorityQueue.cpp  PriorityQueue.h  SPSP.cpp  SPSP.h  SearchSolver.cpp  SearchSolver.h  Searchable.cpp  Searchable.h  Searcher.h  SearchingClientHandler.cpp  SearchingClientHandler.h  SerialServer.cpp  (+15 more)
